@@ -3,6 +3,10 @@ This file is a translation of the main russian changelog and is provided by volu
 It might not always be as up to date as the main changelog.
 =======================================================================================
 
+drkns 26.04.2019 23:37:23 +0100 - build 5391
+
+1. Continuation of 5368.
+
 drkns 25.04.2019 23:57:58 +0100 - build 5390
 
 1. Refactoring.
